force-app/main/default/objects/CouponCodes__c/CouponCodes__c.object-meta.xml
<CustomObject>
    <description>This will give access to the Coupon Code Object.</description>
    <label>Coupon Codes</label>
    <nameField>
        <label>Coupan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupon Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>