force-app/main/default/objects/CouponCodes__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <description>Stores the unique identifier from the external SAP master system.</description>
    <externalId>true</externalId>
    <label>Code Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>