force-app/main/default/objects/CouponCodes__c/fields/CouponCodes__c.field-meta.xml
<CustomField>
    <fullName>CouponCodes__c</fullName>
    <description>Stores discount codes received from the SAP system, used to apply promotional pricing to eligible products.</description>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>