force-app/main/default/objects/CouponCodes__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <description>Shows the discount percentage applicable to products linked to the coupon code.</description>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>